--- a/runtime-automation/01-ansible-navigator-intro/validation.yml
+++ b/runtime-automation/01-ansible-navigator-intro/validation.yml
@@ -1,24 +1,16 @@
 ---
-- name: Solve control node
+- name: Validation control node
   hosts: controller
   gather_facts: false
   vars:
     USER: rhel
   tasks:
-    - name: Get stats of hosts file
+    - name: Get stats of playbook
       ansible.builtin.stat:
-        path: /home/{{ USER }}/ansible-files/inventory
-      register: r_hosts
+        path: /home/{{ USER }}/ansible-files/test.yml
+      register: r_play
 
-    - name: Write fail logs
-      ansible.builtin.copy:
-        content: "The 'inventory' file does not exist."
-        dest: "{{ job_info_dir }}/output.txt"
-        mode: "0644"
-      when: not r_hosts.stat.exists
-      delegate_to: localhost
-
-    - name: Fail if the host file does not exist
-      ansible.builtin.fail:
-        msg: "Hosts file doesn't exist"
-      when: not r_hosts.stat.exists
+    - name: Write fail log
+      validation_check:
+        error_msg: "The 'test.yml' playbook does not exist."
+        check: r_hosts.stat.exists
