--- a/runtime-automation/02-ansible-navigator-explore-ui/solve.yml
+++ b/runtime-automation/02-ansible-navigator-explore-ui/solve.yml
@@ -4,26 +4,6 @@
   vars:
     USER: rhel
   tasks:
-    - name: Create system-setup.yml
-      ansible.builtin.copy:
-        content: |
-          ---
-          - name: Basic System Setup
-            hosts: node1
-            become: true
-            tasks:
-              - name: Install security updates for the kernel
-                ansible.builtin.dnf:
-                  name: 'kernel'
-                  state: latest
-                  security: true
-
-              - name: Create a new user
-                ansible.builtin.user:
-                  name: myuser
-                  state: present
-                  create_home: true
-        dest: /home/{{ USER }}/ansible-files/system_setup.yml
-        owner: "{{ USER }}"
-        group: "{{ USER }}"
-        mode: "0644"
+    - name: Print msg
+      ansible.builtin.debug:
+        msg: "Setup has completed"
