--- a/runtime-automation/03-configure-ansible-navigator/validation.yml
+++ b/runtime-automation/03-configure-ansible-navigator/validation.yml
@@ -1,23 +1,19 @@
-- name: Basic System Setup
-  hosts: node1
-  become: true
+---
+- name: Validation control node
+  hosts: controller
+  gather_facts: false
+  vars:
+    USER: rhel
   tasks:
-
-    - name: Check user existence
+    - name: Get stats of ansible-navigator.yml
       ansible.builtin.command:
-        cmd: id myuser
+        cmd: grep -Fxq "editor:" /home/{{ USER }}/ansible-files/ansible-navigator.yml
+      register: r_check_file
+      check_mode: false
       ignore_errors: true
-      register: user_check
+      changed_when: false
 
-    - name: Write fail logs
-      ansible.builtin.copy:
-        content: "Challenge 1.2 - FAIL: myuser does not exist. Something is wrong."
-        dest: "{{ job_info_dir }}/output.txt"
-        mode: "0644"
-      when: user_check.rc != 0
-      delegate_to: localhost
-
-    - name: Fail if user does not exist
-      ansible.builtin.fail:
-        msg: "User 'myuser'doesn't exists."
-      when: user_check.rc != 0
+    - name: Write fail log
+      validation_check:
+        error_msg: "The 'ansible-navigator.yml' does not have all the contents"
+        check: not r_check_file.rc
