--- a/runtime-automation/04-ansible-navigator-using-execution-environments/solve.yml
+++ b/runtime-automation/04-ansible-navigator-using-execution-environments/solve.yml
@@ -4,42 +4,28 @@
   vars:
     USER: rhel
   tasks:
-    - name: Create hosts
+    - name: Create ansible-navigator.yml
       ansible.builtin.copy:
         content: |
           ---
-          - name: Basic System Setup
-            hosts: web
-            become: true
-            tasks:
-              - name: Install security updates for the kernel
-                ansible.builtin.dnf:
-                  name: 'kernel'
-                  state: latest
-                  security: true
+          ansible-navigator:
+            execution-environment:
+              container-engine: podman
+              image: quay.io/acme_corp/first_playbook_ee:latest
+              enabled: true
+              pull-policy: never
 
-              - name: Create a new user
-                ansible.builtin.user:
-                  name: myuser
-                  state: present
-                  create_home: true
-        dest: /home/{{ USER }}/ansible-files/system_setup.yml
+            playbook-artifact:
+              save-as: /home/rhel/ansible-files/{playbook_name}-artifact-{ts_utc}.json
+
+            logging:
+              level: debug
+
+            editor:
+              command: code-server {filename}
+              console: false
+
+        dest: "/home/{{ USER }}/ansible-files/ansible-navigator.yml"
         owner: "{{ USER }}"
         group: "{{ USER }}"
         mode: "0644"
-
-- name: Basic System Setup
-  hosts: web
-  become: true
-  tasks:
-    - name: Install security updates for the kernel
-      ansible.builtin.dnf:
-        name: 'kernel'
-        state: latest
-        security: true
-
-    - name: Create a new user
-      ansible.builtin.user:
-        name: myuser
-        state: present
-        create_home: true
