--- a/runtime-automation/04-ansible-navigator-using-execution-environments/validation.yml
+++ b/runtime-automation/04-ansible-navigator-using-execution-environments/validation.yml
@@ -1,23 +1,9 @@
-- name: Basic System Setup
-  hosts: web
-  become: true
+---
+- name: Validation control node
+  hosts: controller
+  vars:
+    USER: rhel
   tasks:
-
-    - name: Check user existence
-      ansible.builtin.command:
-        cmd: id myuser
-      ignore_errors: true
-      register: user_check
-
-    - name: Write fail logs
-      ansible.builtin.copy:
-        content: "Challenge 1.3 - FAIL: myuser does not exist. Something is wrong."
-        dest: "{{ job_info_dir }}/output.txt"
-        mode: "0644"
-      when: user_check.rc != 0
-      delegate_to: localhost
-
-    - name: Fail if user does not exist
-      ansible.builtin.fail:
-        msg: "User 'myuser'doesn't exists."
-      when: user_check.rc != 0
+    - name: Print msg
+      ansible.builtin.debug:
+        msg: "Setup has completed"
