--- a/runtime-automation/05-navigator-quiz/setup.yml
+++ b/runtime-automation/05-navigator-quiz/setup.yml
@@ -1,15 +1,9 @@
 ---
 - name: Setup control node
   hosts: controller
+  gather_facts: false
   vars:
     USER: rhel
-  tasks:
-    - name: Print msg
-      ansible.builtin.debug:
-        msg: "Setup has completed"
-
-- name: Setup nodes
-  hosts: nodes
   tasks:
     - name: Print msg
       ansible.builtin.debug:
