--- a/runtime-automation/05-navigator-quiz/solve.yml
+++ b/runtime-automation/05-navigator-quiz/solve.yml
@@ -4,38 +4,6 @@
   vars:
     USER: rhel
   tasks:
-    - name: Create hosts
-      ansible.builtin.copy:
-        content: |
-          ---
-          - name: Basic System Setup
-            hosts: web
-            become: true
-            vars:
-              user_name: 'padawan'
-            tasks:
-              - name: Install security updates for the kernel
-                ansible.builtin.dnf:
-                  name: 'kernel'
-                  state: latest
-                  security: true
-
-              - name: Create a new user
-                ansible.builtin.user:
-                  name: "{% raw %}{{ user_name }}{% endraw %}"
-                  state: present
-                  create_home: true
-        dest: /home/{{ USER }}/ansible-files/system_setup.yml
-        owner: "{{ USER }}"
-        group: "{{ USER }}"
-        mode: "0644"
-
-- name: Basic System Setup
-  hosts: web
-  become: true
-  tasks:
-    - name: Create a new user
-      ansible.builtin.user:
-        name: padawan
-        state: present
-        create_home: true
+    - name: Print msg
+      ansible.builtin.debug:
+        msg: "Setup has completed"
