--- a/runtime-automation/01-ansible-navigator-intro/setup.yml
+++ b/runtime-automation/01-ansible-navigator-intro/setup.yml
@@ -5,7 +5,7 @@
   vars:
     USER: rhel
   tasks:
-    - name: Become block
+    - name: One time become block
       become: true
       block:
         - name: Remove setup bundle
@@ -19,6 +19,15 @@
             regexp: 'enabled.*$'
             replace: 'enabled = 0'
 
+        - name: Remove sudo for rhel
+          ansible.builtin.file:
+            path: /etc/sudoers.d/rhel
+            state: absent
+      rescue:
+        - name: Block already executed
+          ansible.builtin.debug:
+            msg: "Please go on"
+
     - name: Create ansible-navigator.yml
       ansible.builtin.copy:
         content: |
@@ -26,15 +35,16 @@
           ansible-navigator:
             execution-environment:
               container-engine: podman
-              image: quay.io/acme_corp/first_playbook_ee:latest
               enabled: false
-              pull-policy: never
-
-            playbook-artifact:
-              save-as: /home/rhel/ansible-files/{playbook_name}-artifact-{ts_utc}.json
+              image: quay.io/acme_corp/first_playbook_ee:latest
+              pull:
+                policy: never
 
             logging:
               level: debug
+
+            playbook-artifact:
+              save-as: /home/rhel/ansible-files/{playbook_name}-artifact-{time_stamp}.json
 
         dest: "/home/{{ USER }}/ansible-files/ansible-navigator.yml"
         owner: "{{ USER }}"
