--- a/runtime-automation/01-dashboard/setup.yml
+++ b/runtime-automation/01-dashboard/setup.yml
@@ -5,28 +5,28 @@
   vars:
     USER: rhel
   tasks:
-    - name: One time become block
-      become: true
-      block:
-        - name: Remove setup bundle
-          ansible.builtin.file:
-            path: /var/ansible-automation-platform-setup-bundle-2.4-6-x86_64.tar.gz
-            state: absent
+    # - name: One time become block
+    #   become: true
+    #   block:
+    #     - name: Remove setup bundle
+    #       ansible.builtin.file:
+    #         path: /var/ansible-automation-platform-setup-bundle-2.4-6-x86_64.tar.gz
+    #         state: absent
 
-        - name: Stop register warning
-          ansible.builtin.replace:
-            path: /etc/yum/pluginconf.d/subscription-manager.conf
-            regexp: 'enabled.*$'
-            replace: 'enabled = 0'
+    #     - name: Stop register warning
+    #       ansible.builtin.replace:
+    #         path: /etc/yum/pluginconf.d/subscription-manager.conf
+    #         regexp: 'enabled.*$'
+    #         replace: 'enabled = 0'
 
-        - name: Remove sudo for rhel
-          ansible.builtin.file:
-            path: /etc/sudoers.d/rhel
-            state: absent
-      rescue:
-        - name: Block already executed
-          ansible.builtin.debug:
-            msg: "Please go on"
+    #     - name: Remove sudo for rhel
+    #       ansible.builtin.file:
+    #         path: /etc/sudoers.d/rhel
+    #         state: absent
+    #   rescue:
+    #     - name: Block already executed
+    #       ansible.builtin.debug:
+    #         msg: "Please go on"
 
     - name: Create ansible-navigator.yml
       ansible.builtin.copy:
