--- a/runtime-automation/03-controller-getting-started-jt/validation.yml
+++ b/runtime-automation/03-controller-getting-started-jt/validation.yml
@@ -13,7 +13,7 @@
       ignore_errors: true
       changed_when: false
 
-    - name: Write fail log
-      validation_check:
-        error_msg: "The 'ansible-navigator.yml' does not have all the contents"
-        check: not r_check_file.rc
+    # - name: Write fail log
+    #   validation_check:
+    #     error_msg: "The 'ansible-navigator.yml' does not have all the contents"
+    #     check: not r_check_file.rc
