--- a/zero-touch-config.yml
+++ b/zero-touch-config.yml
@@ -18,11 +18,12 @@ tabs:
   - name: Controller
     port: 8443
     path: /#/login
-  - name: ">_control"
-    port: 443
-    path: /tty1
   - name: VSCode Editor
     port: 8443
     path: /editor/?folder=/home/rhel
+  - name: ">_Control CLI"
+    port: 443
+    path: /tty1
+
 
   
