--- a/runtime-automation/01-intro/solve.yml
+++ b/runtime-automation/01-intro/solve.yml
@@ -3,11 +3,15 @@
   hosts: controller
   vars:
     USER: rhel
+  environment:
     controller_host: localhost:8443
     controller_user: admin
     controller_pass: ansible123!
     inventory_name: Lab-Inventory
     credentials_name: lab-credentials
+    CONTROLLER_HOST: https://localhost:8443
+    CONTROLLER_USERNAME: admin
+    CONTROLLER_PASSWORD: 'ansible123!'
     CONTROLLER_VERIFY_SSL: false
   tasks:
     - name: Print msg
