--- a/runtime-automation/03-inventory/validation.yml
+++ b/runtime-automation/03-inventory/validation.yml
@@ -3,7 +3,8 @@
   hosts: controller
   vars:
     USER: rhel
-  tasks:
-    - name: Print msg
-      ansible.builtin.debug:
-        msg: "Setup has completed"
+  environment:
+    CONTROLLER_HOST: https://localhost:8443
+    CONTROLLER_USERNAME: admin
+    CONTROLLER_PASSWORD: ansible123!
+    CONTROLLER_VERIFY_SSL: false
