--- a/runtime-automation/08-template-extended/solve.yml
+++ b/runtime-automation/08-template-extended/solve.yml
@@ -1,9 +1,28 @@
 ---
+
 - name: Solve control node
   hosts: controller
   vars:
     USER: rhel
+  environment:
+    CONTROLLER_HOST: https://localhost:8443
+    CONTROLLER_USERNAME: admin
+    CONTROLLER_PASSWORD: ansible123!
+    CONTROLLER_VERIFY_SSL: false
+
   tasks:
-    - name: Print msg
-      ansible.builtin.debug:
-        msg: "Setup has completed"
+    - name: Create set motd Job Template
+      awx.awx.job_template:
+        name: "Set motd"
+        organization: Default
+        state: present
+        inventory: Lab-Inventory
+        become_enabled: true
+        playbook: motd_facts.yml
+        project: "Additional playbooks"
+        credential: lab-credentials
+
+    - name: Launch the set motd Job Template
+      awx.awx.job_launch:
+        job_template: "Set motd"
+
