--- a/runtime-automation/09-workflow/solve.yml
+++ b/runtime-automation/09-workflow/solve.yml
@@ -11,31 +11,53 @@
     CONTROLLER_VERIFY_SSL: false
 
   tasks:
-    - name: Add node3 to Lab-Inventory
-      awx.awx.host:
-        name: node3
-        inventory: Lab-Inventory
-        state: present
-
-    - name: Create database group and add node3
-      awx.awx.group:
-        name: database
-        inventory: Lab-Inventory
-        hosts:
-          - node3
-
-    - name: Create Extended services Job Template
-      awx.awx.job_template:
-        name: "Extended services"
+    - name: Create a Workflow Template
+      awx.awx.workflow_job_template:
+        name: Your first workflow
+        description: Create a Workflow from previous Job Templates
         organization: Default
-        state: present
         inventory: Lab-Inventory
-        become_enabled: true
-        playbook: extended_services.yml
-        project: "Additional playbooks"
-        credential: lab-credentials
+        workflow_nodes:
+          - identifier: apache101
+            unified_job_template:
+              organization:
+                name: Default
+              name: "Install Apache"
+              type: job_template
+            credentials: []
+            related:
+              success_nodes:
+                - identifier: extended201
+                - identifier: motd201
+              failure_nodes: []
+              always_nodes: []
+              credentials: []
+          - identifier: extended201
+            unified_job_template:
+              organization:
+                name: Default
+              name: "Extended services"
+              type: job_template
+            credentials: []
+            related:
+              success_nodes: []
+              failure_nodes: []
+              always_nodes: []
+              credentials: []
+          - identifier: motd201
+            unified_job_template:
+              organization:
+                name: Default
+              name: "Set motd"
+              type: job_template
+            credentials: []
+            related:
+              success_nodes: []
+              failure_nodes: []
+              always_nodes: []
+              credentials: []
 
-    - name: Launch the Extended services Job Template
+    - name: Launch the Apache Job Template with Survey
       awx.awx.job_launch:
-        job_template: "Extended services"
-      register: job_extended
+        job_template: "Your first workflow"
+      register: job_your_first_workflow
