--- a/runtime-automation/09-workflow/solve.yml
+++ b/runtime-automation/09-workflow/solve.yml
@@ -59,5 +59,5 @@
 
     - name: Launch the Apache Job Template with Survey
       awx.awx.workflow_launch:
-        job_template: "Your first workflow"
+        workflow_template: "Your first workflow"
       register: job_your_first_workflow
