--- a/runtime-automation/10-template-survey/solve.yml
+++ b/runtime-automation/10-template-survey/solve.yml
@@ -44,7 +44,8 @@
                 "question_name": "What’s your name?",
                 "type": "text",
                 "variable": "student_name",
-                "required": false
+                "required": false,
+                "default": "Skippy"
               }
             ]
           }
