--- a/runtime-automation/03-inventory/validation.yml
+++ b/runtime-automation/03-inventory/validation.yml
@@ -23,7 +23,7 @@
     - name: Validate inventory
       validation_check:
         error_msg: "The 'Lab-Inventory' does not exists"
-        check: check_inv.changed
+        check: not check_inv.changed
 
     - name: Check node1 and node2 in Lab-Inventory
       awx.awx.host:
@@ -40,7 +40,7 @@
     - name: Validate nodes in the inventory
       validation_check:
         error_msg: "The 'nodes' does not exists"
-        check: check_inv_hosts.changed
+        check: not check_inv_hosts.changed
 
     - name: Check web group and add hosts
       awx.awx.group:
@@ -56,4 +56,4 @@
     - name: Validate groups and nodes in the inventory
       validation_check:
         error_msg: "The 'nodes' does not exists"
-        check: check_inv_group.changed
+        check: not check_inv_group.changed
