--- a/runtime-automation/04-project/validation.yml
+++ b/runtime-automation/04-project/validation.yml
@@ -3,6 +3,12 @@
   hosts: controller
   vars:
     USER: rhel
+  environment:
+    CONTROLLER_HOST: https://localhost:8443
+    CONTROLLER_USERNAME: admin
+    CONTROLLER_PASSWORD: ansible123!
+    CONTROLLER_VERIFY_SSL: false
+
   tasks:
     - name: Check your first Project from git
       awx.awx.project:
