--- a/runtime-automation/08-template-extended/validation.yml
+++ b/runtime-automation/08-template-extended/validation.yml
@@ -10,6 +10,33 @@
     CONTROLLER_VERIFY_SSL: false
 
   tasks:
+    - name: Check node3 to Lab-Inventory
+      awx.awx.host:
+        name: node3
+        inventory: Lab-Inventory
+        state: present
+      check_mode: true
+      register: check_inv_host3
+
+    - name: Validate node
+      validation_check:
+        error_msg: "The 'node3' does not exists"
+        check: not check_inv_host3.changed
+
+    - name: Check database group and add host
+      awx.awx.group:
+        name: database
+        inventory: Lab-Inventory
+        hosts:
+          - node3
+      check_mode: true
+      register: check_inv_grp_db
+
+    - name: Validate group and node
+      validation_check:
+        error_msg: "The 'database group and node' does not exists"
+        check: not check_inv_grp_db.changed
+
     - name: Check extended services Job Template
       awx.awx.job_template:
         name: "Extended services"
