--- a/runtime-automation/10-template-survey/validation.yml
+++ b/runtime-automation/10-template-survey/validation.yml
@@ -3,7 +3,42 @@
   hosts: controller
   vars:
     USER: rhel
+  environment:
+    CONTROLLER_HOST: https://localhost:8443
+    CONTROLLER_USERNAME: admin
+    CONTROLLER_PASSWORD: ansible123!
+    CONTROLLER_VERIFY_SSL: false
+
   tasks:
-    - name: Print msg
-      ansible.builtin.debug:
-        msg: "Setup has completed"
+    - name: Check Job Template with Survey
+      awx.awx.job_template:
+        name: "Install Apache with Survey"
+        organization: "Default"
+        state: "present"
+        inventory: "Lab-Inventory"
+        become_enabled: true
+        playbook: "apache_template.yml"
+        project: "Apache playbooks"
+        credential: lab-credentials
+        survey_enabled: true
+        survey_spec: >-
+          {
+            "name": "Apache Survey",
+            "description": "Configure page with username",
+            "spec": [
+              {
+                "question_name": "What’s your name?",
+                "type": "text",
+                "variable": "student_name",
+                "required": false,
+                "default": "Skippy"
+              }
+            ]
+          }
+      check_mode: true
+      register: check_survey
+
+    - name: Validate Job template
+      validation_check:
+        error_msg: "The Job template 'Install Apache with Survey' does not exists"
+        check: not check_survey.changed
