--- a/runtime-automation/01-intro/setup.yml
+++ b/runtime-automation/01-intro/setup.yml
@@ -5,6 +5,35 @@
   vars:
     USER: rhel
   tasks:
-    - name: Print msg
-      ansible.builtin.debug:
-        msg: "Setup has completed"
+    - name: One time become block
+      become: true
+      block:
+        - name: Remove setup bundle
+          ansible.builtin.file:
+            path: /tmp/controller_license_manifest.zip
+            state: absent
+
+        - name: Unregister node
+          community.general.redhat_subscription:
+          state: absent
+
+        - name: Uninstall katello package
+          ansible.builtin.dnf:
+            name: katello-ca-consumer-demosat-capsule-01.infra.demo.redhat.com-1.0-1.noarch
+            state: absent
+
+        - name: Stop register warning
+          ansible.builtin.replace:
+            path: /etc/yum/pluginconf.d/subscription-manager.conf
+            regexp: 'enabled.*$'
+            replace: 'enabled = 0'
+
+        - name: Remove sudo for rhel
+          ansible.builtin.file:
+            path: /etc/sudoers.d/rhel
+            state: absent
+      rescue:
+        - name: Block already executed
+          ansible.builtin.debug:
+            msg: "Please go on"
+
